@@ -10,6 +10,7 @@
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
+  <property name="default_height">500</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
   <property name="has_separator">True</property>
@@ -223,8 +224,8 @@
 	      <property name="xpad">0</property>
 	      <property name="ypad">0</property>
 	      <accessibility>
-		<atkrelation target="add_button" type="label-for"/>
 		<atkrelation target="add_entry" type="label-for"/>
+		<atkrelation target="add_button" type="label-for"/>
 	      </accessibility>
 	    </widget>
 	    <packing>
