@@ -1,3 +1,10 @@
+Wed Jun 04 10:53:21 2003  George Lebl <jirka@5z.com>
+
+	* gui/gdmchooser.(c|glade), gui/gdmwm.c: after 3 seconds of no
+	  response print an error message if a host was just added.  If the
+	  host sent back an unwilling, print an error message as well saying
+	  that.  Also fix centering and the initial size of the chooser.
+
 Tue Jun 03 13:56:24 2003  George Lebl <jirka@5z.com>
 
 	* config/gdm.conf.in, daemon/gdm.h: change ScanTime default to 4,
